--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body style="background-color:#eeeeee; margin: auto; text-align: center;">
-<!-- Start cssSlider.com -->
+<!-- Start  -->
 	<div class='csslider1 autoplay '>
 		<input name="cs_anchor1" id='cs_slide1_0' type="radio" class='cs_anchor slide' >
 		<input name="cs_anchor1" id='cs_slide1_1' type="radio" class='cs_anchor slide' >
@@ -15,22 +15,19 @@
 		<input name="cs_anchor1" id='cs_play1' type="radio" class='cs_anchor' checked>
 		<input name="cs_anchor1" id='cs_pause1' type="radio" class='cs_anchor' >
 		<ul>
-			<div style="width: 100%; visibility: hidden; font-size: 0px; line-height: 0;">
-				<img src="image/4.jpg" style="width: 100%;">
+			<div style="width: 100%; visibility: show; font-size: 0px; line-height: 0;">
+				 <a href="#" target=""><img src="image/4.jpg" style="width: 100%;">
 			</div>
 			<li class='num0 img'>
-				 <a href="image/1.jpg' alt='ye' title='ye' /> </a> 
+				 <a href="#" target=""><a href="image/4.jpg' alt='ye' title='ye' /> </a> 
 			</li>
 			<li class='num1 img'>
-				 <a href="#" target=""><img src='image/2.jpg' alt='Croissant' title='Croissant' /> </a> 
+				 <a href="#" target=""><img src='image/2.jpg' alt='zp' title='zp' /> </a> 
 			</li>
 			<li class='num2 img'>
 				 <a href="#" target=""><img src='image/3.jpg' alt='yo' title='yo' /> </a> 
 			</li>
 
-			<li class='num3 img'>
-				 <a href="#" target=""><img src='image/4.jpg' alt='yo' title='yo' /> </a> 
-			</li>
 		
 		</ul>
 		<div class='cs_description'>
@@ -59,7 +56,7 @@
 		<div class='cs_bullets'>
 			<label class='num0' for='cs_slide1_0'>
 				<span class='cs_point'></span>
-				<span class='cs_thumb'><img src='image/1.jpg' alt='ye' title='ye' /></span>
+				<span class='cs_thumb'><img src='image/4.jpg' alt='ye' title='ye' /></span>
 			</label>
 			<label class='num1' for='cs_slide1_1'>
 				<span class='cs_point'></span>
